# compiler

./: .gitattributes  .gitignore  .ok  DESIGN-gadt.cara  DESIGN.md  DOCS_MAP.d2  Desugar.elm  ERRORS.csv  ERRORS.md  LICENSE  README.md  cara.pegjs  compiler.opam  compiler_standin.sh  debug-break.ts  debug.ts  dune-project  elm.json  example.cara  example.hvm  package.json  run-test.sh  run.ts  stdlib.cara  test.mjs  test.ts  to-csv.sh  tsconfig.json  watch-compile.sh
end-to-end-tests/: TODO.txt
examples/: ADTs.cara  Echo.cara  Fib.cara  ProjectEuler001.cara  SplitMix.cara
lib/: dune
review/: elm.json
spec/: README.md  main.typ  template.typ
src/: AST.elm  Common.elm  Desugar.elm  Effect.elm  Emit.elm  Env.elm  EnvDict.elm  Error.elm  Id.elm  Interpreter.elm  Intrinsic.elm  Lexer.elm  Loc.elm  Main.elm  NonemptyList.elm  Operator.elm  Parser.elm  TestRunner.elm  Token.elm  Value.elm  ast.ts  compiler.ml  dune  env.ts  error.ts  identifier.ml  index.ts  interpreter.ts  lexer.ml  lexer.mll  lexer.ts  loc.ts  menhir_parser.mly  parser.ml  parser.mly  parser.ts  registerPorts.ts  run.ts  syntax.ml  test.ts  (+3 more)
src/AST/: Backend.elm  Frontend.elm
src/Basics/: Extra.elm
src/Char/: Extra.elm
src/Codegen/: HVM.elm
src/Debug/: Extra.elm
src/Desugar/: CaseOf.elm
src/HVM/: AST.elm  ToString.elm
src/Id/: Qualified.elm
src/Interpreter/: Internal.elm  Outcome.elm
src/Parser/: HoleAnalysis.elm  Internal.elm
src/String/: Extra.elm
src/Tree/Zipper/: Extra.elm
stdlib/: Gen.cara  IO.cara  List.Nonempty.cara  List.cara  Maybe.cara  Prelude.cara  Random.cara  (+2 more)
(+670 files in other folders)
