(ocamllex (modules lexer))
(menhir 
  ;; (flags --strict)
  ;; (flags -v)
  (flags --external-tokens Token)
  (modules menhir_parser)
)

(executable
  (name compiler)
  (libraries
    nice_parser
    base
    core
    ppx_blob
  )
  (preprocess
    (pps 
      ppx_deriving.show
      ppx_deriving.map
      ppx_jane
      ppx_blob
    )
  )
  (preprocessor_deps "../stdlib.cara")
)

